manifests/app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: k8s-deployment-restarter
  namespace: k8s-deployment-restarter
spec:
  replicas: 1
  selector:
    matchLabels:
      app: k8s-deployment-restarter
  template:
    metadata:
      labels:
        app: k8s-deployment-restarter
    spec:
      serviceAccountName: k8s-deployment-restarter-account
      containers:
        - name: k8s-deployment-restarter
          image: <your-image>
          ports:
            - containerPort: 8000
---
apiVersion: v1
kind: Service
metadata:
  name: k8s-deployment-restarter
  namespace: k8s-deployment-restarter
spec:
  type: ClusterIP
  ports:
    - port: 8080
      targetPort: 8080
  selector:
    app: k8s-deployment-restarter
---
